--- a/Week-4.ipynb
+++ b/Week-4.ipynb
@@ -4,20 +4,30 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "be5a51cd",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import pytorch"
+    "%pip install pytorch"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "933ca7e6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
