--- a/Week-4.ipynb
+++ b/Week-4.ipynb
@@ -2,11 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "72ed381a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty DataFrame\n",
+      "Columns: [python, -m, ipykernel, install, --user, --name=.venv, --display-name, \"Python, (.venv)\"]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "a=pd.read_clipboard()\n",
+    "print(a)"
+   ]
   }
  ],
  "metadata": {
@@ -16,7 +30,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.11"
   }
  },
